# minnesota

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dune-project  minnesota.opam
lib/: Commandline.ml  Gopher.ml  Lib.ml  dune  fs.ml  gopher.ml  server.ml  server.mli
src/: dune
src/lib/: Commandline.ml  Lib.ml  dune
test/: dune  main.ml  test.ml
test/property/: dune  gopher_test.ml
test/unit/: dune  fs_test.ml  gopher_test.ml  unit.ml
